--- a/index.html
+++ b/index.html
@@ -1,12 +1,118 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a
+          ><img
+            src="./img/index-logo.svg"
+            alt="City of sedona"
+            width="138"
+            height="70"
+        /></a>
+        <ul>
+          <li><a href="blank.html">Информация</a></li>
+          <li><a href="blank.html">Фото и видео</a></li>
+          <li><a href="blank.html">Карта штата</a></li>
+          <li><a href="blank.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <main>
+      <h1>Sedona</h1>
 
+      <section>
+        <h2>Преимущества</h2>
+        <ul>
+          <li>
+            <h3>Жильё</h3>
+            <p>Рекомендуем пожить в настоящем мотеле, как в кино!</p>
+          </li>
+          <li>
+            <h3>Еда</h3>
+            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li>
+            <h3>Сувениры</h3>
+            <p>Не только китайского, но и местного производства!</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Описание города</h2>
+        <div>
+          <h3>Настоящий городок</h3>
+          <p>— №1 —</p>
+          <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        </div>
+        <div>
+          <h3>Там есть мост дьявола</h3>
+          <p>— №2 —</p>
+          <p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
+        </div>
+        <div>
+          <h3>Небольшая площадь</h3>
+          <p>— №3 —</p>
+          <p>Все достопримечательности находятся очень близко</p>
+        </div>
+        <div>
+          <h3>Красивая дорога</h3>
+          <p>— №4 —</p>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </div>
+        <div>
+          <h3>Мало туристов</h3>
+          <p>— №5 —</p>
+          <p>Большинство едет в Гранд Каньон и толпится там</p>
+        </div>
+      </section>
+
+      <section>
+        <h2>Предложения гостиниц</h2>
+        <p><strong>Заинтересовались?</strong></p>
+        <p>
+          Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+          предложения гостиниц в Седоне
+        </p>
+      </section>
+    </main>
+
+    <footer>
+      <section>
+        <h2>Visit sedona</h2>
+        <p>#visitsedona</p>
+        <p>тел: +7(495) 666-01-66</p>
+      </section>
+
+      <section>
+        <h2>Давайте дружить</h2>
+        <ul>
+          <li>
+            <a href="#">Твиттер</a>
+          </li>
+          <li>
+            <a href="#">Фейсбук</a>
+          </li>
+          <li>
+            <a href="#">Ютьюб</a>
+          </li>
+        </ul>
+      </section>
+      <p>
+        Website by
+        <img
+          src="./img/logo-htmlacademy.svg"
+          alt="html academy"
+          width="115"
+          height="41"
+        />
+      </p>
+    </footer>
   </body>
 </html>
