--- a/catalog.html
+++ b/catalog.html
@@ -7,24 +7,32 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"
-          ><img
+        <a href="./index.html">
+          <img
             src="./img/index-logo.svg"
             alt="City of sedona"
             width="138"
-            height="70"
-        /></a>
+            height="70"/>
+        </a>
         <ul>
-          <li><a href="blank.html">Информация</a></li>
-          <li><a href="blank.html">Фото и видео</a></li>
-          <li><a href="blank.html">Карта штата</a></li>
-          <li><a href="blank.html">Гостиницы</a></li>
+          <li>
+            <a href="blank.html">Информация</a>
+          </li>
+          <li>
+            <a href="blank.html">Фото и видео</a>
+          </li>
+          <li>
+            <a href="blank.html">Карта штата</a>
+          </li>
+          <li>
+            <a href="blank.html">Гостиницы</a>
+          </li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <h1>Гостиницы</h1>
+      <h1 class="visually-hidden">Гостиницы</h1>
 
       <section>
         <h2>Фильтр поиска</h2>
@@ -142,14 +150,14 @@
     </main>
 
     <footer>
-      <section>
+      <div>
         <h2>Visit sedona</h2>
         <p>#visitsedona</p>
         <p>тел: +7(495) 666-01-66</p>
-      </section>
+      </div>
 
-      <section>
-        <h2>Давайте дружить</h2>
+      <div>
+        <!-- <h2>Давайте дружить</h2> -->
         <ul>
           <li>
             <a href="#">Твиттер</a>
@@ -161,16 +169,19 @@
             <a href="#">Ютьюб</a>
           </li>
         </ul>
-      </section>
-      <p>
-        Website by
-        <img
-          src="./img/logo-htmlacademy.svg"
-          alt="html academy"
-          width="115"
-          height="41"
-        />
-      </p>
+      </div>
+
+      <div>
+        <p>
+          Website by
+          <img
+            src="./img/logo-htmlacademy.svg"
+            alt="html academy"
+            width="115"
+            height="41"
+          />
+        </p>
+      </div>
     </footer>
   </body>
 </html>
