--- a/index.html
+++ b/index.html
@@ -24,20 +24,25 @@
     </header>
 
     <main>
-      <h1>Sedona</h1>
+      <h1 class="visually-hidden">Sedona</h1>
+
+      <!-- Ты пропустил два блока, внимательно посмотри макет -->
 
       <section>
-        <h2>Преимущества</h2>
+        <!-- <h2>Преимущества</h2> -->
         <ul>
           <li>
+            <img src="" alt=""> <!-- Сюда подключай иконки -->
             <h3>Жильё</h3>
             <p>Рекомендуем пожить в настоящем мотеле, как в кино!</p>
           </li>
           <li>
+            <img src="" alt=""> <!-- Сюда подключай иконки -->
             <h3>Еда</h3>
             <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li>
+            <img src="" alt=""> <!-- Сюда подключай иконки -->
             <h3>Сувениры</h3>
             <p>Не только китайского, но и местного производства!</p>
           </li>
@@ -45,37 +50,37 @@
       </section>
 
       <section>
-        <h2>Описание города</h2>
+        <!-- <h2>Описание города</h2> -->
         <div>
           <h3>Настоящий городок</h3>
-          <p>— №1 —</p>
+          <span>— №1 —</span>  <!-- Можно потом будем сверстать через псевдоэлементы -->
           <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
         </div>
         <div>
           <h3>Там есть мост дьявола</h3>
-          <p>— №2 —</p>
+          <span>— №2 —</span> <!-- Можно потом будем сверстать через псевдоэлементы -->
           <p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
         </div>
         <div>
           <h3>Небольшая площадь</h3>
-          <p>— №3 —</p>
+          <span>— №3 —</span> <!-- Можно потом будем сверстать через псевдоэлементы -->
           <p>Все достопримечательности находятся очень близко</p>
         </div>
         <div>
           <h3>Красивая дорога</h3>
-          <p>— №4 —</p>
+          <span>— №4 —</span> <!-- Можно потом будем сверстать через псевдоэлементы -->
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div>
           <h3>Мало туристов</h3>
-          <p>— №5 —</p>
+          <span>— №5 —</span> <!-- Можно потом будем сверстать через псевдоэлементы -->
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </div>
       </section>
 
       <section>
-        <h2>Предложения гостиниц</h2>
-        <p><strong>Заинтересовались?</strong></p>
+        <!-- <h2>Предложения гостиниц</h2> Потом расскажешь зачем решил заголовки прописать, они здесь не нужны -->
+        <h2>Заинтересовались?</h2>
         <p>
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие
           предложения гостиниц в Седоне
@@ -84,14 +89,14 @@
     </main>
 
     <footer>
-      <section>
-        <h2>Visit sedona</h2>
-        <p>#visitsedona</p>
-        <p>тел: +7(495) 666-01-66</p>
-      </section>
+      <div>
+        <!-- <h2>Visit sedona</h2> Аналогично -->
+        <a href="#">#visitsedona</a>
+        <a href="tel:+74956660166">+7(495) 666-01-66</a>
+      </div>
 
-      <section>
-        <h2>Давайте дружить</h2>
+      <div>
+        <!-- <h2>Давайте дружить</h2> -->
         <ul>
           <li>
             <a href="#">Твиттер</a>
@@ -103,16 +108,19 @@
             <a href="#">Ютьюб</a>
           </li>
         </ul>
-      </section>
-      <p>
-        Website by
-        <img
-          src="./img/logo-htmlacademy.svg"
-          alt="html academy"
-          width="115"
-          height="41"
-        />
-      </p>
+      </div>
+
+      <div>
+        <p>
+          Website by
+          <img
+            src="./img/logo-htmlacademy.svg"
+            alt="html academy"
+            width="115"
+            height="41"
+          />
+        </p>
+      </div>
     </footer>
   </body>
 </html>
