graphics and rating layout

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,8 @@
             src="./img/index-logo.svg"
             alt="City of sedona"
             width="138"
-            height="70"/>
+            height="70"
+          />
         </a>
         <ul>
           <li>
@@ -76,9 +77,13 @@
           <li>По рейтингу</li>
         </ul>
 
-        <div>
-          <button type="button">Кнопка вверх</button>
-          <button type="button">Кнопка вниз</button>
+        <div class="sort">
+          <button type="button">
+            <img src="./img/icons/up-dir.svg" alt="Вверх" />
+          </button>
+          <button type="button">
+            <img src="./img/icons/down-dir.svg" alt="Вниз" />
+          </button>
         </div>
       </section>
 
@@ -93,17 +98,53 @@
                 alt="Amara resort & spa"
                 width="135"
                 height="90"
+            /></a>
+            <div class="rating">
+              <input
+                class="rating-input"
+                type="radio"
+                name="amara"
+                id="amara-1"
+                value="1"
               />
-              <div>Рейтинг</div>
-              <p><span>Гостиница</span><span>От 4000 р.</span></p>
-              <div>
-                <p>
-                  <button type="button">Подробнее</button>
-                  <button type="button">Забронировать</button>
-                </p>
-                <div>Рейтинг: 8.5</div>
-              </div>
-            </a>
+              <input
+                class="rating-input"
+                type="radio"
+                name="amara"
+                id="amara-2"
+                value="2"
+              />
+              <input
+                class="rating-input"
+                type="radio"
+                name="amara"
+                id="amara-3"
+                value="3"
+              />
+              <input
+                class="rating-input"
+                type="radio"
+                name="amara"
+                id="amara-4"
+                value="4"
+                checked
+              />
+              <input
+                class="rating-input"
+                type="radio"
+                name="amara"
+                id="amara-5"
+                value="5"
+              />
+            </div>
+            <p><span>Гостиница</span><span>От 4000 р.</span></p>
+            <div>
+              <p>
+                <button type="button">Подробнее</button>
+                <button type="button">Забронировать</button>
+              </p>
+              <div>Рейтинг: 8.5</div>
+            </div>
           </li>
           <li>
             <a href="#">
@@ -113,17 +154,53 @@
                 alt="Desert Quail inn"
                 width="135"
                 height="90"
+            /></a>
+            <div class="rating">
+              <input
+                class="rating-input"
+                type="radio"
+                name="desert"
+                id="desert-1"
+                value="1"
               />
-              <div>Рейтинг</div>
-              <p><span>Мотель</span><span>От 3000 р.</span></p>
-              <div>
-                <p>
-                  <button type="button">Подробнее</button>
-                  <button type="button">Забронировать</button>
-                </p>
-                <div>Рейтинг: 8.9</div>
-              </div>
-            </a>
+              <input
+                class="rating-input"
+                type="radio"
+                name="desert"
+                id="desert-2"
+                value="2"
+              />
+              <input
+                class="rating-input"
+                type="radio"
+                name="desert"
+                id="desert-3"
+                value="3"
+                checked
+              />
+              <input
+                class="rating-input"
+                type="radio"
+                name="desert"
+                id="desert-4"
+                value="4"
+              />
+              <input
+                class="rating-input"
+                type="radio"
+                name="desert"
+                id="desert-5"
+                value="5"
+              />
+            </div>
+            <p><span>Мотель</span><span>От 3000 р.</span></p>
+            <div>
+              <p>
+                <button type="button">Подробнее</button>
+                <button type="button">Забронировать</button>
+              </p>
+              <div>Рейтинг: 8.9</div>
+            </div>
           </li>
           <li>
             <a href="#">
@@ -133,17 +210,53 @@
                 alt="Villas at poco diablo"
                 width="135"
                 height="90"
+            /></a>
+            <div class="rating">
+              <input
+                class="rating-input"
+                type="radio"
+                name="villas"
+                id="villas-1"
+                value="1"
               />
-              <div>Рейтинг</div>
-              <p><span>Апартаменты</span><span>От 2000 р.</span></p>
-              <div>
-                <p>
-                  <button type="button">Подробнее</button>
-                  <button type="button">Забронировать</button>
-                </p>
-                <div>Рейтинг: 9.2</div>
-              </div>
-            </a>
+              <input
+                class="rating-input"
+                type="radio"
+                name="villas"
+                id="villas-2"
+                value="2"
+                checked
+              />
+              <input
+                class="rating-input"
+                type="radio"
+                name="villas"
+                id="villas-3"
+                value="3"
+              />
+              <input
+                class="rating-input"
+                type="radio"
+                name="villas"
+                id="villas-4"
+                value="4"
+              />
+              <input
+                class="rating-input"
+                type="radio"
+                name="villas"
+                id="villas-5"
+                value="5"
+              />
+            </div>
+            <p><span>Апартаменты</span><span>От 2000 р.</span></p>
+            <div>
+              <p>
+                <button type="button">Подробнее</button>
+                <button type="button">Забронировать</button>
+              </p>
+              <div>Рейтинг: 9.2</div>
+            </div>
           </li>
         </ul>
       </section>
@@ -157,16 +270,21 @@
       </div>
 
       <div>
-        <!-- <h2>Давайте дружить</h2> -->
         <ul>
           <li>
-            <a href="#">Твиттер</a>
+            <a href="#">
+              <span class="visually-hidden twitter">Твиттер</span>
+            </a>
           </li>
           <li>
-            <a href="#">Фейсбук</a>
+            <a href="#">
+              <span class="visually-hidden facebook">Фейсбук</span>
+            </a>
           </li>
           <li>
-            <a href="#">Ютьюб</a>
+            <a href="#">
+              <span class="visually-hidden youtube"> Ютьюб</span>
+            </a>
           </li>
         </ul>
       </div>
