--- a/index.html
+++ b/index.html
@@ -25,24 +25,39 @@
 
     <main>
       <h1 class="visually-hidden">Sedona</h1>
-
-      <!-- Ты пропустил два блока, внимательно посмотри макет -->
+      <section>
+        <p>
+          <img src="./img/welcome.svg" alt="Welcome" />
+          <img src="./img/to-the-georgeous.svg" alt="to the georgeous" />
+          <img
+            src="./img/sedona.svg"
+            alt="Sedona. Because the Grand Canyon sucks!"
+          />
+        </p>
+      </section>
 
       <section>
-        <!-- <h2>Преимущества</h2> -->
+        <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+      </section>
+
+      <section>
         <ul>
           <li>
-            <img src="" alt=""> <!-- Сюда подключай иконки -->
+            <img src="" alt="" />
+            <img src="./img/icons/housing.svg" alt="Жильё" />
             <h3>Жильё</h3>
             <p>Рекомендуем пожить в настоящем мотеле, как в кино!</p>
           </li>
           <li>
-            <img src="" alt=""> <!-- Сюда подключай иконки -->
+            <img src="" alt="" />
+            <img src="./img/icons/meal.svg" alt="Еда" />
             <h3>Еда</h3>
             <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li>
-            <img src="" alt=""> <!-- Сюда подключай иконки -->
+            <img src="" alt="" />
+            <img src="./img/icons/souvenirs.svg" alt="Сувениры" />
             <h3>Сувениры</h3>
             <p>Не только китайского, но и местного производства!</p>
           </li>
@@ -50,36 +65,39 @@
       </section>
 
       <section>
-        <!-- <h2>Описание города</h2> -->
         <div>
           <h3>Настоящий городок</h3>
-          <span>— №1 —</span>  <!-- Можно потом будем сверстать через псевдоэлементы -->
+          <span>— №1 —</span>
+          <!-- Можно потом будем сверстать через псевдоэлементы -->
           <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
         </div>
         <div>
           <h3>Там есть мост дьявола</h3>
-          <span>— №2 —</span> <!-- Можно потом будем сверстать через псевдоэлементы -->
+          <span>— №2 —</span>
+          <!-- Можно потом будем сверстать через псевдоэлементы -->
           <p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
         </div>
         <div>
           <h3>Небольшая площадь</h3>
-          <span>— №3 —</span> <!-- Можно потом будем сверстать через псевдоэлементы -->
+          <span>— №3 —</span>
+          <!-- Можно потом будем сверстать через псевдоэлементы -->
           <p>Все достопримечательности находятся очень близко</p>
         </div>
         <div>
           <h3>Красивая дорога</h3>
-          <span>— №4 —</span> <!-- Можно потом будем сверстать через псевдоэлементы -->
+          <span>— №4 —</span>
+          <!-- Можно потом будем сверстать через псевдоэлементы -->
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div>
           <h3>Мало туристов</h3>
-          <span>— №5 —</span> <!-- Можно потом будем сверстать через псевдоэлементы -->
+          <span>— №5 —</span>
+          <!-- Можно потом будем сверстать через псевдоэлементы -->
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </div>
       </section>
 
       <section>
-        <!-- <h2>Предложения гостиниц</h2> Потом расскажешь зачем решил заголовки прописать, они здесь не нужны -->
         <h2>Заинтересовались?</h2>
         <p>
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие
@@ -90,22 +108,26 @@
 
     <footer>
       <div>
-        <!-- <h2>Visit sedona</h2> Аналогично -->
         <a href="#">#visitsedona</a>
         <a href="tel:+74956660166">+7(495) 666-01-66</a>
       </div>
 
       <div>
-        <!-- <h2>Давайте дружить</h2> -->
         <ul>
           <li>
-            <a href="#">Твиттер</a>
+            <a href="#">
+              <span class="visually-hidden twitter">Твиттер</span>
+            </a>
           </li>
           <li>
-            <a href="#">Фейсбук</a>
+            <a href="#">
+              <span class="visually-hidden facebook">Фейсбук</span>
+            </a>
           </li>
           <li>
-            <a href="#">Ютьюб</a>
+            <a href="#">
+              <span class="visually-hidden youtube"> Ютьюб</span>
+            </a>
           </li>
         </ul>
       </div>
