img width and height, input type image for up-down sorting

--- a/catalog.html
+++ b/catalog.html
@@ -78,12 +78,8 @@
         </ul>
 
         <div class="sort">
-          <button type="button">
-            <img src="./img/icons/up-dir.svg" alt="Вверх" />
-          </button>
-          <button type="button">
-            <img src="./img/icons/down-dir.svg" alt="Вниз" />
-          </button>
+          <input type="image" src="./img/icons/up-dir.svg" alt="Вверх" />
+          <input type="image" src="./img/icons/down-dir.svg" alt="Вниз" />
         </div>
       </section>
 
