--- a/index.html
+++ b/index.html
@@ -27,11 +27,18 @@
       <h1 class="visually-hidden">Sedona</h1>
       <section>
         <p>
-          <img src="./img/welcome.svg" alt="Welcome" />
-          <img src="./img/to-the-georgeous.svg" alt="to the georgeous" />
+          <img src="./img/welcome.svg" alt="Welcome" width="188" height="45" />
+          <img
+            src="./img/to-the-georgeous.svg"
+            alt="to the georgeous"
+            width="256"
+            height="29"
+          />
           <img
             src="./img/sedona.svg"
             alt="Sedona. Because the Grand Canyon sucks!"
+            width="457"
+            height="213"
           />
         </p>
       </section>
@@ -44,20 +51,27 @@
       <section>
         <ul>
           <li>
-            <img src="" alt="" />
-            <img src="./img/icons/housing.svg" alt="Жильё" />
+            <img
+              src="./img/icons/housing.svg"
+              alt="Жильё"
+              width="75"
+              height="72"
+            />
             <h3>Жильё</h3>
             <p>Рекомендуем пожить в настоящем мотеле, как в кино!</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <img src="./img/icons/meal.svg" alt="Еда" />
+            <img src="./img/icons/meal.svg" alt="Еда" width="74" height="70" />
             <h3>Еда</h3>
             <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <img src="./img/icons/souvenirs.svg" alt="Сувениры" />
+            <img
+              src="./img/icons/souvenirs.svg"
+              alt="Сувениры"
+              width="64"
+              height="76"
+            />
             <h3>Сувениры</h3>
             <p>Не только китайского, но и местного производства!</p>
           </li>
